--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,7 +1,5 @@
 <header role="banner">
-  <nav class="wrapper">
-    <a href="/">Home</a>
-    <a href="/other/">Another page</a>
-    <a href="/template/">A template page</a>
+  <nav class="wrapper font-bold">
+   Banner Test Fonts
   </nav>
 </header>
