--- a/_imports/head.html
+++ b/_imports/head.html
@@ -1,8 +1,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wdth,wght@62..125,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/dist/css/style.css" />
   <sergey-slot>
-    <title>Sergey example website (default title)</title>
+    <title>banner.dev</title>
   </sergey-slot>
 </head>
