--- a/_imports/template.html
+++ b/_imports/template.html
@@ -5,7 +5,7 @@
 <body>
   <sergey-import src="header" />
 
-  <main class="wrapper">
+  <main class="wrapper text-4xl">
     <sergey-slot />
   </main>
 
