--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <sergey-import src="header" />
 
     <main class="wrapper">
-      <p>👋 Welcome to the Sergey example website!</p>
-      <p>This page is located at: <code>/index.html</code></p>
-      <p>Check out <a href="https://sergey.cool/">sergey.cool</a> for documentation and tips. If you spot any problems, or have feature requests, please <a href="https://github.com/trys/sergey/issues">file an issue</a> on the <a href="https://github.com/trys/sergey">GitHub repository</a>.</p>
+
+      <h1 class="archivo font-normal  text-6xl leading-none font-condensed"><strong class="font-extrabold">We went shopping in a food desert </strong> where there is little access to healthy food. Here’s what we found.</h1>
+      
     </main>
 
     <sergey-import src="footer" />
-  </body>
+  </body> 
 </html>
