--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <sergey-import src="head" />
-  <body>
+  <body class="">
     <sergey-import src="header" />
 
-    <main class="wrapper">
+    <main class="wrapper p-8">
 
-      <h1 class="archivo font-normal  text-6xl leading-none font-condensed"><strong class="font-extrabold">We went shopping in a food desert </strong> where there is little access to healthy food. Here’s what we found.</h1>
+      <div class="h-6 w-16 bg-[#7000FF] mb-6"></div>
+
+      <h1 class="archivo font-thin  text-6xl leading-none font-condensed"><strong class="font-extrabold">We went shopping in a food desert </strong> where there is little access to healthy food. Here’s what we found.</h1>
       
     </main>
 
