--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,5 +1,14 @@
-<header role="banner">
-  <nav class="wrapper font-bold">
-   Banner Test Fonts
+<header role="banner" class="bg-black text-white">
+
+  <nav class="wrapper archivo font-normal font-condensed mb-4 p-2 flex justify-between items-center">
+   <div><img src="assets/images/logo-wordmark.svg" width="200"></div>
+
+   <div class="charm-container">
+    <div class="charm-item" id="date">Wed, Sep 27</div>
+    <div class="charm-item" id="subscribe"><a href="#" class="underline decoration-[#FF4019] font-normal">Subscribe for $1</a></div>
+    <div class="charm-item" id="time"><span class="material-symbols-outlined mr-1 opacity-50">sports_football</span> Bal 29 &nbsp; Tex 9</div>
+    <div class="charm-item" id="weather"><span class="material-symbols-outlined mr-1 opacity-50">wb_sunny</span> 81°</div>
+  </div>
+
   </nav>
 </header>
