--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 
     <main class="wrapper p-8">
 
-      <div class="h-6 w-16 bg-[#7000FF] mb-6"></div>
-
-      <h1 class="archivo font-thin  text-5xl leading-none font-condensed"><strong class="font-extrabold">We went shopping in a food desert </strong> where there is little access to healthy food. Here’s what we found.</h1>
+      <sergey-import src="card-list" />
       
     </main>
 
