--- a/_imports/card-list.html
+++ b/_imports/card-list.html
@@ -11,7 +11,7 @@
 		<time class="text-xs mb-4 block">Sep 1, 2023</time>
 		</div>
 		<div class="aspect-square bg-red-300">
-		<img class="object-cover h-full" src="https://www.thebaltimorebanner.com/resizer/StUW4suTlogfAbKLLgJ34s6lNcQ=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/YPDI2OSCBNGZZL25TVSXYBTF3Q.jpg">
+		<img class="object-cover h-full w-full" src="https://www.thebaltimorebanner.com/resizer/StUW4suTlogfAbKLLgJ34s6lNcQ=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/YPDI2OSCBNGZZL25TVSXYBTF3Q.jpg">
 		</div>
 	</div>
 	<div class="item flex flex-col  pl-4 pt-4 pb-4">
@@ -20,14 +20,14 @@
 		<time class="text-xs mb-4 block">Sep 1, 2023</time>
 		</div>
 		<div class="aspect-square bg-red-300">
-		<img class="object-cover h-full" src="https://www.thebaltimorebanner.com/resizer/vY8R49Q1vupf6S9z9iKknf-uDEs=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/VD2GPVACCFAKLLCP7GGVK73UEQ.jpg">
+		<img class="object-cover h-full w-full" src="https://www.thebaltimorebanner.com/resizer/vY8R49Q1vupf6S9z9iKknf-uDEs=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/VD2GPVACCFAKLLCP7GGVK73UEQ.jpg">
 		</div>
 	</div>
 	</div>
 
 	<div class="item border-t pt-4">
 		<div class="aspect-video mb-4 bg-red-300">
-		<img class="object-cover w-full" src="https://www.thebaltimorebanner.com/resizer/MsKcKTiyB1z7Oqid_IwHlFI0mfM=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/UPCIIKTZKNGL7CKMTSHF2GW3PE.jpg">
+		<img class="object-cover w-full h-full" src="https://www.thebaltimorebanner.com/resizer/MsKcKTiyB1z7Oqid_IwHlFI0mfM=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/UPCIIKTZKNGL7CKMTSHF2GW3PE.jpg">
 		</div>
 		<h3 class="font-condensed text-lg leading-tight mb-1"><strong>Ravens Slant: There was anxiety before Week 1.</strong> After a win vs. Houston, there’s a lot more.</h3>
 		<time class="text-xs mb-4 block">Sep 1, 2023</time>
