--- a/_imports/header.html
+++ b/_imports/header.html
@@ -6,8 +6,8 @@
    <div class="charm-container">
     <div class="charm-item" id="date">Wed, Sep 27</div>
     <div class="charm-item" id="subscribe"><a href="#" class="underline decoration-[#FF4019] font-normal">Subscribe for $1</a></div>
-    <div class="charm-item" id="time"><span class="material-symbols-outlined mr-1 opacity-50">sports_football</span> Bal 29 &nbsp; Tex 9</div>
-    <div class="charm-item" id="weather"><span class="material-symbols-outlined mr-1 opacity-50">wb_sunny</span> 81°</div>
+    <div class="charm-item" id="time"><span class="material-symbols-outlined mr-2 opacity-50 text-base">sports_football</span> Bal 29 &nbsp; Tex 9</div>
+    <div class="charm-item" id="weather"><span class="material-symbols-outlined mr-1 opacity-50 text-base">wb_sunny</span> 81°</div>
   </div>
 
   </nav>
