--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
 
     <main class="wrapper p-5">
 
+      
+
+
       <sergey-import src="card-list" />
+
+      <sergey-import src="blockquote">
+          <sergey-template name="addclass"></sergey-template>
+      </sergey-import>
+
+      <sergey-import src="blockquote">
+          <sergey-template name="addclass">bright</sergey-template>
+      </sergey-import>
+
+      <sergey-import src="blockquote">
+          <sergey-template name="addclass">sports</sergey-template>
+      </sergey-import>
       
     </main>
 
