--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,6 +1,6 @@
 <header role="banner" class="bg-black text-white">
 
-  <nav class="wrapper archivo font-normal font-condensed mb-4 p-2 flex justify-between items-center">
+  <nav class="wrapper archivo font-normal font-condensed mb-4 px-2 flex justify-between items-center">
    <div><img src="assets/images/logo-wordmark.svg" width="200"></div>
 
    <div class="charm-container">
