--- a/_imports/card-list.html
+++ b/_imports/card-list.html
@@ -1,13 +1,13 @@
-<div class="card-list archivo">
+<div class="card-list px-4">
 
 	<div class="heading">
-		<h3 class="uppercase text-red-500 font-condensed font-medium text-sm border-b pb-2">More in Sports</h3>
+		<h3 class="uppercase text-orange font-bold text-sm border-b border-light-gray pb-2">More in Sports</h3>
 	</div>
 
 	<div class="grid grid-cols-2">
 	<div class="item flex flex-col justify-between border-r pr-4 pt-4 pb-4">
 		<div class="content">
-		<h3 class="font-condensed text-lg leading-tight mb-1"><strong>Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
+		<h3 class="gt-condensed text-lg leading-tight mb-1"><strong>Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
 		<time class="text-xs mb-4 block">Sep 1, 2023</time>
 		</div>
 		<div class="aspect-square bg-red-300">
@@ -16,7 +16,7 @@
 	</div>
 	<div class="item flex flex-col  pl-4 pt-4 pb-4">
 		<div class="content">
-		<h3 class="font-condensed text-lg leading-tight mb-1"><strong>Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
+		<h3 class="gt-condensed text-lg leading-tight mb-1"><strong>Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
 		<time class="text-xs mb-4 block">Sep 1, 2023</time>
 		</div>
 		<div class="aspect-square bg-red-300">
@@ -29,7 +29,7 @@
 		<div class="aspect-video mb-4 bg-red-300">
 		<img class="object-cover w-full h-full" src="https://www.thebaltimorebanner.com/resizer/MsKcKTiyB1z7Oqid_IwHlFI0mfM=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/UPCIIKTZKNGL7CKMTSHF2GW3PE.jpg">
 		</div>
-		<h3 class="font-condensed text-lg leading-tight mb-1"><strong>Ravens Slant: There was anxiety before Week 1.</strong> After a win vs. Houston, there’s a lot more.</h3>
+		<h3 class="gt-condensed text-lg leading-tight mb-1"><strong>Ravens Slant: There was anxiety before Week 1.</strong> After a win vs. Houston, there’s a lot more.</h3>
 		<time class="text-xs mb-4 block">Sep 1, 2023</time>
 		
 	</div>
