--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,6 +1,6 @@
 <header role="banner" class="bg-black text-white">
-  <nav class="wrapper archivo font-normal font-condensed mb-4 px-2 flex justify-between items-center">
-   <div><img src="assets/images/logo-wordmark.svg" width="200"></div>
+  <nav class="wrapper gt font-normal font-condensed mb-4 px-2 flex justify-between items-center">
+   <div><a href="index.html"><img src="assets/images/logo-wordmark.svg" width="200"></a></div>
 
    <div class="charm-container">
     <div class="charm-item" id="date">Wed, Sep 27</div>
