--- a/_imports/topper.html
+++ b/_imports/topper.html
@@ -1,3 +1,3 @@
 <div class="h-6 w-16 bg-[#7000FF] mb-6"></div>
 
-      <h1 class="archivo font-thin  text-5xl leading-none font-condensed"><strong class="font-extrabold">We went shopping in a food desert </strong> where there is little access to healthy food. Here’s what we found.</h1>
+      <h1 class="gt font-thin  text-5xl leading-none font-condensed"><strong class="font-extrabold">We went shopping in a food desert </strong> where there is little access to healthy food. Here’s what we found.</h1>
