--- a/index.html
+++ b/index.html
@@ -6,12 +6,47 @@
 
     <main class="wrapper p-5">
 
+      <section class="mb-12">
+        <h2 class="border-b pb-2 mb-4 uppercase text-sm font-condensed">Layouts</h2>
+
+        <ul>
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="#">None yet...</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+          </li>
+        </ul>
+
+      </section>
+
+
+      <section class="mb-12">
+        <h2 class="border-b pb-2 mb-4 uppercase text-sm font-condensed">Basics</h2>
+
+        <ul>
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="typeface.html">Typeface</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+          </li>
+        </ul>
+
+      </section>
       
 
-      <ul>
-        <li><a class="underline block mb-2" href="card-list.html">Card List</a></li>
-        <li><a class="underline block mb-2" href="pullquote.html">Pullquote</a></li>
-      </ul>
+      <section class="mb-12">
+        <h2 class="border-b pb-2 mb-4 uppercase text-sm font-condensed">Components</h2>
+
+        <ul>
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="card-list.html">Card List</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">5</div>
+          </li>
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="pullquote.html">Pullquote</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">4</div>
+          </li>
+        </ul>
+
+      </section>
 
 
 
