--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body class="">
     <sergey-import src="header" />
 
-    <main class="wrapper p-5">
+    <main class="wrapper p-5 lg:grid lg:grid-cols-3 gap-8">
 
       <section class="mb-12">
         <h2 class="border-b pb-2 mb-4 uppercase text-sm font-condensed">Layouts</h2>
@@ -27,6 +27,10 @@
             <a class="block mb-2 font-bold" href="typeface.html">Typeface</a>
             <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
           </li>
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="colors.html">Colors</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+          </li>
         </ul>
 
       </section>
@@ -38,11 +42,15 @@
         <ul>
           <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
             <a class="block mb-2 font-bold" href="card-list.html">Card List</a>
-            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">5</div>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">1</div>
           </li>
           <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
             <a class="block mb-2 font-bold" href="pullquote.html">Pullquote</a>
-            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">4</div>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">3</div>
+          </li>
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="author-block.html">Author Block</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
           </li>
         </ul>
 
