--- a/_imports/template.html
+++ b/_imports/template.html
@@ -5,9 +5,16 @@
 <body>
   <sergey-import src="header" />
 
-  <main class="wrapper text-4xl">
-    <sergey-slot />
-  </main>
+  <sergey-slot />
+
+  <div class="source mt-16 px-6 border-t border-light-gray pt-12">
+    <h4 class="mb-2">Source Code</h4>
+  <textarea class="w-full h-96 border border-light-gray p-6 text-gray-700 bg-light text-gray rounded-lg mb-16"><sergey-slot /></textarea>
+
+  <h4 class="mb-2">Selector</h4>
+  <input class="w-full border border-light-gray p-6 text-gray-700 bg-light text-gray rounded-lg mb-16" type="" name="" value='<sergey-slot name="selector" />'>
+
+  </div>
 
   <sergey-import src="footer" />
 </body>
