--- a/_imports/colors.html
+++ b/_imports/colors.html
@@ -1,10 +1,3 @@
-<div class="bg-orange flex flex-col-3 p-4 gap-8">
-  <div class="image w-1/3 aspect-[3/4] my-4 bg-light-green -rotate-1">&nbsp;</div>
-  <div class="image w-1/3 aspect-[3/4] bg-light-green rotate-1">&nbsp;</div>
-  <div class="image w-1/3 aspect-[3/4] my-4 bg-light-green ">&nbsp;</div>
-</div>
-
-
 <div class="p-4">
   <div class="grid grid-cols-2 md:grid-cols-6 gap-4">
     <div class="flex flex-col items-center p-2 rounded-lg bg-black">
@@ -103,6 +96,13 @@
       <div class="w-full p-2 bg-white text-black text-center rounded-b-lg">
         <div>Yellow</div>
         <div class="text-xs">#feffc9</div>
+      </div>
+    </div>
+    <div class="flex flex-col items-center p-2 rounded-lg bg-gold">
+      <div class="w-16 h-16 rounded-lg bg-gold"></div>
+      <div class="w-full p-2 bg-white text-black text-center rounded-b-lg">
+        <div>Gold</div>
+        <div class="text-xs">#FFC700</div>
       </div>
     </div>
   </div>
