--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,13 +1,34 @@
 <header role="banner" class="bg-black text-white">
   <nav class="wrapper gt font-normal font-condensed mb-4 px-2 flex justify-between items-center">
-   <div><a href="index.html"><img src="assets/images/logo-wordmark.svg" width="200"></a></div>
+   <div class="flex gap-1 items-center"><a class="inline-block" href="index.html"><img src="assets/images/logo-wordmark.svg" width="200"></a><span class="text-gray">.dev</span></div>
 
    <div class="charm-container">
     <div class="charm-item" id="date">Wed, Sep 27</div>
-    <div class="charm-item" id="subscribe"><a href="#" class="underline decoration-[#FF4019] font-normal">Subscribe for $1</a></div>
-    <div class="charm-item" id="time"><span class="material-symbols-outlined mr-2 opacity-50 text-base">sports_football</span> Bal 29 &nbsp; Tex 9</div>
-    <div class="charm-item" id="weather"><span class="material-symbols-outlined mr-1 opacity-50 text-base">wb_sunny</span> 81°</div>
+    <div class="charm-item" id="subscribe"><a href="#" class="underline decoration-2 decoration-orange font-normal">Subscribe for $1</a></div>
+    <div class="charm-item" id="time"><span class="material-symbols-sharp mr-2 opacity-50 text-base">sports_football</span> Bal 29 &nbsp; Tex 9</div>
+    <div class="charm-item" id="weather"><span class="material-symbols-sharp mr-1 opacity-50 text-base">wb_sunny</span> 81°</div>
   </div>
 
   </nav>
+
+  <nav class="bottom fixed bg-white bottom-0 left-0 right-0 flex items-center gap-4 justify-between">
+    
+    <div class="logo w-14 h-14 bg-black flex items-center justify-center flex-none">
+      <a href="index.html"><img src="assets/images/logo-character.svg" width="22"></a>
+    </div>
+
+    <div class="cta flex-none">
+      <a href="#" class="block leading-none text-black font-condensed underline decoration-2 decoration-orange hover:decoration-purple font-medium">Subscribe for $1</a>
+    </div>
+
+    <div class="icons flex flex-grow justify-end px-2 gap-2">
+      <a href="#" class="px-2 py-0.5 text-black border-l pl-6">
+        <span class="material-symbols-sharp leading-none text-2xl">person</span>
+      </a>
+      <a href="index.html" class="px-2 py-0.5 text-black">
+        <span class="material-symbols-sharp leading-none text-2xl">apps</span>
+      </a>
+    </div>
+  </nav>
+
 </header>
