--- a/_imports/pullquote.html
+++ b/_imports/pullquote.html
@@ -1,6 +1,6 @@
-<blockquote class='<sergey-slot name="addclass" />'>
+<blockquote>
 	<p>It was obviously an unreal feeling to be back up here.</p>
-	<cite>
+	<cite class="not-italic text-base leading-tight font-normal mt-4 block">
 		<p><strong>Kevin Zeitler </strong></p>
 		<p>Ravens right guard</p> 
 	</cite>
