--- a/_imports/article.html
+++ b/_imports/article.html
@@ -1,3 +1,5 @@
+<sergey-import src="article-topper" />
+
 <div class="article-body">
 
 <p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
