--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
 
         <ul>
 
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+              <div class="flex justify-between cursor-pointer toggleMenu">
+                <a class="block mb-2 font-bold">Article Topper</a>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">2</div>
+              </div>
+              <ul class="submenu hidden">
+                <li class="mb-1"><a href="article-topper.html">↳ Default</a></li>
+                <li class="mb-1"><a href="article-topper-center.html">↳ Default Center</a></li>
+              </ul>
+            </li>
+
           <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
             <a class="block mb-2 font-bold" href="author-block.html">Author Block</a>
             <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
@@ -65,6 +76,13 @@
               <li class="mb-1"><a href="collage-3-up-square.html">↳ 3-up, Square</a></li>
               <li class="mb-1"><a href="collage-2-up-vertical.html">↳ 2-up, Vertical</a></li>
               <li class="mb-1"><a href="collage-2-up-landscape.html">↳ 2-up, Landscape</a></li>
+            </ul>
+          </li>
+
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="divider.html">Divider</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+            <ul class="submenu hidden">
             </ul>
           </li>
 
