--- a/_imports/article-topper-context.html
+++ b/_imports/article-topper-context.html
@@ -1,8 +1,8 @@
-<div class="block-article-topper-context block-article-topper-context-sections mt-8 mb-4 font-condensed font-light relative">
+<div class="block-article-topper-context block-article-topper-context-sections mt-8 mb-4 font-condensed font-light relative max-w-3xl mx-auto">
 
-	<div class="scroller overflow-x-scroll whitespace-nowrap pr-16">
+	<div class="scroller overflow-x-scroll whitespace-nowrap pr-16 md:pr-0">
 
-	<a class="section-front uppercase font-black text-orange font-ultra-condensed px-4 text-lg">
+	<a class="section-front uppercase font-bold text-orange font-ultra-condensed px-4 text-lg">
 		Howard County
 	</a>
 	<a href="#" class="section mr-2 hover:text-purple">K-12 Schools</a>
