--- a/_imports/article-topper-left.html
+++ b/_imports/article-topper-left.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper md:text-center">
+<div class="block-article-topper block-article-topper-left">
 
 <sergey-import src="article-topper-context" />
 
