--- a/_imports/article-topper-wide.html
+++ b/_imports/article-topper-wide.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper md:text-center">
+<div class="block-article-topper block-article-topper-wide md:text-center">
 
 <sergey-import src="article-topper-context" />
 
@@ -6,7 +6,7 @@
 
 <sergey-import src="attribution-date" />
 
-<sergey-import src="lead-art" />
+<sergey-import src="lead-art-wide" />
 
 <sergey-import src="article-lead" />
 
