--- a/_imports/attribution-date.html
+++ b/_imports/attribution-date.html
@@ -4,8 +4,9 @@
 		<a href="#" class="underline decoration-2 underline-offset-2">Christina Tkacik</a>
 	</div>
 
-	<time class="leading-none flex flex-col gap-1 md:flex-row">
-		<span class="published">Published 3/16/22 10:20 p.m. EST</span> <span class="updated">Updated 3/16/22 11:15 p.m. EST</span>
+	<time class="leading-none inline-block">
+		<span class="published">Published 3/16/22 10:20 p.m. EST</span> <br class="md:hidden"><span class="updated">Updated 3/16/22 11:15 p.m. EST</span>
 	</time>
 
 </div>
+
