--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
           <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
               <div class="flex justify-between cursor-pointer toggleMenu">
                 <a class="block mb-2 font-bold">Article Topper</a>
-                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">2</div>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">6</div>
               </div>
               <ul class="submenu hidden">
                 <li class="mb-1"><a href="article-topper.html">↳ Default</a></li>
-                <li class="mb-1"><a href="article-topper-center.html">↳ Default Center</a></li>
+                <li class="mb-1"><a href="article-topper-left.html">↳ Default, Left</a></li>
+                <li class="mb-1"><a href="article-topper-wide.html">↳ Wide Art</a></li>
+                <li class="mb-1"><a href="article-topper-wide-left.html">↳ Wide Art, Left</a></li>
+                <li class="mb-1"><a href="article-topper-full.html">↳ Full Art</a></li>
+                <li class="mb-1"><a href="article-topper-full-left.html">↳ Full Art, Left</a></li>
               </ul>
             </li>
 
