--- a/_imports/article-topper-full.html
+++ b/_imports/article-topper-full.html
@@ -1,6 +1,6 @@
 <div class="block-article-topper md:center">
 
-<sergey-import src="article-topper-context" />
+<sergey-import src="article-topper-context-related" />
 
 <sergey-import src="article-topper-headline" />
 
