--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <li class="mb-1"><a href="article-topper-wide-left.html">↳ Wide Art, Left</a></li>
                 <li class="mb-1"><a href="article-topper-full.html">↳ Full Art</a></li>
                 <li class="mb-1"><a href="article-topper-full-left.html">↳ Full Art, Left</a></li>
+                <li class="mb-1"><a href="article-topper-none.html">↳ No Art</a></li>
+                <li class="mb-1"><a href="article-topper-none-left.html">↳ No Art, Left</a></li>
               </ul>
             </li>
 
