--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
               <div class="flex justify-between cursor-pointer toggleMenu">
                 <a class="block mb-2 font-bold">Article Topper</a>
-                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">6</div>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">8</div>
               </div>
               <ul class="submenu hidden">
                 <li class="mb-1"><a href="article-topper.html">↳ Default</a></li>
@@ -75,7 +75,7 @@
           <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
             <div class="flex justify-between cursor-pointer toggleMenu">
               <a class="block mb-2 font-bold">Collage</a>
-              <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">3</div>
+              <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">4</div>
             </div>
             <ul class="submenu hidden">
               <li class="mb-1"><a href="collage-3-up-vertical.html">↳ 3-up, Vertical</a></li>
@@ -99,13 +99,6 @@
             </ul>
           </li>
 
-          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
-            <a class="block mb-2 font-bold" href="paywall-inline.html">Paywall Inline</a>
-            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
-            <ul class="submenu hidden">
-            </ul>
-          </li>
-
           <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
             <div class="flex justify-between cursor-pointer toggleMenu">
               <a class="block mb-2 font-bold">Pullquote</a>
@@ -118,6 +111,33 @@
             </ul>
           </li>
 
+
+        </ul>
+
+      </section>
+
+      <section class="mb-12">
+        <h2 class="border-b border-black pb-2 mb-4 uppercase text-sm font-condensed">Marketing</h2>
+
+        <ul>
+
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+              <div class="flex justify-between cursor-pointer toggleMenu">
+                <a class="block mb-2 font-bold">Offer</a>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center">2</div>
+              </div>
+              <ul class="submenu hidden">
+                <li class="mb-1"><a href="offer.html">↳ Offer</a></li>
+                <li class="mb-1"><a href="offer-light.html">↳ Offer, Light</a></li>
+              </ul>
+            </li>
+
+          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
+            <a class="block mb-2 font-bold" href="paywall-inline.html">Paywall Inline</a>
+            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+            <ul class="submenu hidden">
+            </ul>
+          </li>
 
         </ul>
 
