--- a/paywall-inline.html
+++ b/paywall-inline.html
@@ -1,6 +1,7 @@
 <sergey-import src="template">
 
   <div class="mt-32">
+    <!-- this container is for display in the guide. remove it later -->
 
   <sergey-import src="paywall-inline" />
   <sergey-template name="selector">.block-paywall-inline</sergey-template>
