--- a/_imports/divider.html
+++ b/_imports/divider.html
@@ -1,3 +1,3 @@
 <div class="block-divider my-6 px-4">
-<hr class="h-1.5 bg-black slant-clip">
+<hr class="h-1.5 bg-black slant-clip border-0">
 </div>
