article body, quotes

--- a/_imports/article-topper-context-related.html
+++ b/_imports/article-topper-context-related.html
@@ -2,7 +2,7 @@
 
 	<div class="scroller overflow-x-scroll whitespace-nowrap pr-16 md:pr-0">
 
-	<a class="section-front font-mono italic font-times px-4 pr-3 text-lg">
+	<a class="section-front font-caslon px-4 pr-3 text-lg">
 		Culture
 	</a>
 	<a href="#" class="inline-block slant-clip px-2 bg-purple text-white italic uppercase font-normal text-sm mr-2">Related</a>
