--- a/_imports/head.html
+++ b/_imports/head.html
@@ -7,12 +7,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@24,400,1,0" />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dist/css/style.css" />
   <sergey-slot>
     <title>banner.dev</title>
   </sergey-slot>
 </head>
 
-<body class="pb-32">
+<body class="pb-32 overflow-x-hidden">
 
   <sergey-import src="header" />
