--- a/_imports/header.html
+++ b/_imports/header.html
@@ -4,21 +4,21 @@
 
    <div class="charm-container">
     <div class="charm-item" id="date">Wed, Sep 27</div>
-    <div class="charm-item" id="subscribe"><a href="#" class="underline decoration-2 decoration-orange font-normal">Subscribe for $1</a></div>
+    <div class="charm-item" id="subscribe"><a href="#" class="underline decoration-1 underline-offset-2 decoration-orange font-normal">Subscribe for $1</a></div>
     <div class="charm-item" id="time"><span class="material-symbols-sharp mr-2 opacity-50 text-base">sports_football</span> Bal 29 &nbsp; Tex 9</div>
     <div class="charm-item" id="weather"><span class="material-symbols-sharp mr-1 opacity-50 text-base">wb_sunny</span> 81°</div>
   </div>
 
   </nav>
 
-  <nav class="bottom fixed bg-white bottom-0 left-0 right-0 flex items-center gap-4 justify-between">
+  <nav class="bottom fixed z-50 bg-white bottom-0 left-0 right-0 flex items-center gap-4 justify-between">
     
     <div class="logo w-14 h-14 bg-black flex items-center justify-center flex-none">
       <a href="index.html"><img src="assets/images/logo-character.svg" width="22"></a>
     </div>
 
     <div class="cta flex-none">
-      <a href="#" class="block leading-none text-black font-condensed underline decoration-2 decoration-orange hover:decoration-purple font-medium">Subscribe for $1</a>
+      <a href="#" class="block leading-none text-black font-condensed underline decoration-1 decoration-orange hover:decoration-purple underline underline-offset-2 font-medium">Subscribe for $1</a>
     </div>
 
     <div class="icons flex flex-grow justify-end px-2 gap-2">
