--- a/_imports/pullquote-sports.html
+++ b/_imports/pullquote-sports.html
@@ -1,7 +1,19 @@
-<blockquote class="sports bg-black relative text-white p-8 text-4xl uppercase tracking-tight italic my-8 font-black">
-	<p>It was obviously an unreal feeling to be back up here.</p>
-	<cite class="not-italic text-base leading-tight font-normal mt-4 block">
-		<p><strong>Kevin Zeitler </strong></p>
-		<p>Ravens right guard</p> 
-	</cite>
-</blockquote>
+<div class="block-pullquote block-pullquote-sports py-6">
+
+	<hr class="h-1.5 bg-orange top-clip border-0">
+
+	<div class="flex">
+
+	<blockquote class="relative p-8 pb-4 pl-0">
+		<p class="text-4xl uppercase tracking-tight italic font-black font-expanded">It was obviously an unreal feeling to be back up here.</p>
+		<cite class="empty:hidden not-italic text-base leading-tight font-normal mt-4 block">
+			<p class="text-lg tracking-tight"><strong>Kevin Zeitler </strong></p>
+			<p class="text-gray">Lawyer</p> 
+		</cite>
+	</blockquote>
+
+	<div class="flex-none w-1.5 bg-purple bottom-right-clip">&nbsp;</div>
+
+	</div>
+
+</div>
