--- a/pullquote-sports.html
+++ b/pullquote-sports.html
@@ -1,10 +1,6 @@
 <sergey-import src="template">
 
-  <div class="px-4">
-
     <sergey-import src="pullquote-sports" />
-    <sergey-template name="selector">pullquote.sports</sergey-template>
-
-  </div>
+    <sergey-template name="selector">blockquote.sports</sergey-template>
 
 </sergey-import>
