toppers, quotes, desktop

--- a/_imports/attribution-date.html
+++ b/_imports/attribution-date.html
@@ -1,4 +1,4 @@
-<div class="block-attribution-date font-condensed text-lg font-light my-4 px-4 max-w-3xl mx-auto">
+<div class="block-attribution-date font-condensed text-lg font-light my-4 px-4 max-w-3xl mx-auto w-full">
 	
 	<div class="attribution mb-2">
 		<a href="#" class="underline decoration-1 underline-offset-2">Christina Tkacik</a>
