--- a/layout-article-feature.html
+++ b/layout-article-feature.html
@@ -1,6 +1,6 @@
 <sergey-import src="template">
 
-  <sergey-import src="article" />
+  <sergey-import src="layout-article-feature" />
   <sergey-template name="selector"></sergey-template>
   
 </sergey-import>
