--- a/_imports/article-body.html
+++ b/_imports/article-body.html
@@ -2,7 +2,7 @@
 
 <p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
 
-<sergey-import src="pullquote-sports-black" />
+<sergey-import src="blockquote" />
 
 <p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
 
