--- a/_imports/article-lead.html
+++ b/_imports/article-lead.html
@@ -1,3 +1,7 @@
+<div class="article-lead max-w-3xl mx-auto">
+
 <sergey-import src="divider" />
 
-<p class="article-lead px-4 font-bold text-3xl font-condensed leading-none mb-6">Nearly one in four Baltimore residents live in a food desert, Black residents are disproportionately affected.</p>
+<p class="px-4 font-bold text-3xl font-condensed leading-none mb-6">Nearly one in four Baltimore residents live in a food desert, Black residents are disproportionately affected.</p>
+
+</div>
