--- a/_imports/article-topper-context-related.html
+++ b/_imports/article-topper-context-related.html
@@ -1,8 +1,8 @@
-<div class="block-article-topper-context block-article-topper-context-sections mt-8 mb-4 font-condensed font-light relative max-w-3xl mx-auto">
+<div class="block-article-topper-context block-article-topper-context-sections mt-8 mb-4 font-condensed font-light relative max-w-3xl mx-auto w-full">
 
 	<div class="scroller overflow-x-scroll whitespace-nowrap pr-16 md:pr-0">
 
-	<a class="section-front font-caslon px-4 pr-3 text-lg">
+	<a class="section-front font-caslon px-4 pr-2 text-lg">
 		Culture
 	</a>
 	<a href="#" class="inline-block slant-clip px-2 bg-purple text-white italic uppercase font-normal text-sm mr-2">Related</a>
@@ -10,6 +10,6 @@
 
 	</div>
 
-	<div class="absolute w-16 bg-gradient-to-l from-white shade right-0 top-0 bottom-0 border-r-4 border-white">&nbsp;</div>
+	<div class="absolute w-16 bg-gradient-to-l from-white shade right-0 top-0 bottom-0 border-r-4 border-white pointer-events-none">&nbsp;</div>
 
 </div>
