--- a/_imports/article-topper-context.html
+++ b/_imports/article-topper-context.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper-context block-article-topper-context-sections mt-8 mb-4 font-condensed font-light relative max-w-3xl mx-auto">
+<div class="block-article-topper-context block-article-topper-context-sections mt-8 mb-4 font-condensed font-light relative max-w-3xl mx-auto w-full">
 
 	<div class="scroller overflow-x-scroll whitespace-nowrap pr-16 md:pr-0">
 
@@ -15,6 +15,6 @@
 
 	</div>
 
-	<div class="absolute w-16 bg-gradient-to-l from-white shade right-0 top-0 bottom-0 border-r-4 border-white">&nbsp;</div>
+	<div class="absolute w-16 bg-gradient-to-l from-white shade right-0 top-0 bottom-0 border-r-4 border-white pointer-events-none">&nbsp;</div>
 
 </div>
