--- a/_imports/article-topper-headline.html
+++ b/_imports/article-topper-headline.html
@@ -1,3 +1,5 @@
 <h1 class="block-article-topper-headline font-condensed font-light text-5xl max-w-3xl mx-auto px-4 tracking-tight">
+	<sergey-slot>
 	<strong class="font-black">We went shopping in a food desert</strong> where there is little access to healthy food. Here’s what we found.
+	</sergey-slot>
 </h1>
